Se incluye endpoint de lista de predicciones por equipo en rango de fecha
Se agrega el enpoint que permite buscar los registros de predicciones filtrados por equipo y rango de fecha.
